# poly-phys

./: .gitignore  AGENTS.md  CLAUDE.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yaml
notebooks/: Playground.ipynb
polyphys/analyze/: __init__.py  measurer.py
polyphys/manage/: __init__.py  organizer.py  parser.py  types.py  utils.py
polyphys/tests/analyze/: test_measurer.py
polyphys/tests/manage/: test_utils.py
