[build-system]
    requires = ["setuptools", "wheel"]
    build-backend = "setuptools.build_meta"

[project]
    name = "polyphys"
    description = "Computer Simulation Data Management and Analysis."
    authors = [{ name="Amir Sadeghi", email="amirh.sadeghi@outlook.com" }]
    readme = "README.md"
    license = "MIT"
    classifiers = [
        "Intended Audience :: Science/Research",
        "Topic :: Scientific/Engineering :: Physics",
        "Topic :: Scientific/Engineering :: Chemistry",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13"
    ]
    dynamic = ["version"]
    requires-python = ">=3.11"
    dependencies = [
        "numpy",
        "pandas",
        "scipy",
        "matplotlib",
        "seaborn",
        "MDAnalysis",
        "statsmodels",
        "pyarrow",
        "packaging",
        "click"
    ]

[project.optional-dependencies]
    docs = [
        "sphinx",
        "sphinx_sitemap",
        "pydata-sphinx-theme",
        "sphinx-autodoc-typehints",
        "myst-parser"
    ]
    dev = [
        "pytest",
        "pytest-cov",
        "flake8",
        "mypy",
        "pandas-stubs",
        "build"
    ]
    notebooks = [
        "ipykernel",
        "ipython",
        "jupyter-client",
        "jupyter-core",
        "matplotlib-inline"
    ]

[project.urls]
    Source = "https://github.com/amirhs1/PolyPhys"

[project.scripts]
    polyphys = "polyphys.cli:main"

[tool.setuptools]
    include-package-data = true

[tool.setuptools.dynamic]
    version = {attr = "polyphys.__version__.__version__"}

[tool.setuptools.package-data]
    "polyphys.test_data" = ["**/*"]

[tool.setuptools.packages.find]
    include = ["polyphys*"]
    exclude = ["notebooks*", "projects*", "under_review*"]

[tool.pytest.ini_options]
    addopts = "--doctest-modules --doctest-glob=README.md"
    testpaths = ["polyphys/tests"]
